--- a/roles/zookeeper/templates/zoo.cfg.j2
+++ b/roles/zookeeper/templates/zoo.cfg.j2
@@ -20,7 +20,7 @@ clientPort=2181
 # The fist port is used by followers to connect to the leader
 # The second one is used for leader election
 {% for zookeeper_host in groups['zookeeper'] %}
-server.{{ loop.index0 }}={{ zookeeper_host }}:2888:3888
+server.{{ loop.index0 +1 }}={{ zookeeper_host }}:2888:3888
 {% endfor %}
 #server.1=zookeeper1:2888:3888
 #server.2=zookeeper2:2888:3888
